--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,9 @@
 @import "./base/settings";
 @import "./base/base";
+@import "./base/content-container";
 @import "./components/header";
+@import "./components/button";
+@import "./components/list";
+@import "./components/add-option";
+@import "./components/option";
+@import "./components/react-modal";
