--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,7 +4,7 @@ $off-white: #a5afd7;
 $blue: #3c4251;
 $light-blue: #464b5e;
 $dark-blue: #333745;
-$purple: #8357c5;
+$bright-blue: #11999e;
 
 // Spacing
 $s-size: 1.2rem;
